--- a/Frogger.ipynb
+++ b/Frogger.ipynb
@@ -15,14 +15,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import ale_py, cv2, os, random, torch\n",
+    "import ale_py, cv2, os, random\n",
     "import gymnasium as gym\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from collections import defaultdict, deque\n",
     "from gymnasium.wrappers import RecordVideo\n",
-    "import torch.nn as nn\n",
-    "import torch.optim as optim"
    ]
   },
   {
